--- a/public/2048/style.css
+++ b/public/2048/style.css
@@ -59,6 +59,7 @@
         justify-content: center; 
         padding-top: 9vh;
         border: 0.4vh solid white;
+        background-color: rgba(240, 255, 255, 0.183);
     }
     .table{
         height: 70vh;
